@@ -1,11 +1,11 @@
 dnl Functions for libcfile
 dnl
-dnl Version: 20120325
+dnl Version: 20120825
 
 dnl Function to detect if libcfile dependencies are available
 AC_DEFUN([AX_LIBCFILE_CHECK_LOCAL],
- [dnl Headers included in libcfile/libcfile_file.h and libcfile/libcfile_support.h
- AC_CHECK_HEADERS([errno.h sys/stat.h])
+ [dnl Headers included in libcfile/libcfile_file.h, libcfile/libcfile_stream.h and libcfile/libcfile_support.h
+ AC_CHECK_HEADERS([errno.h stdio.h sys/stat.h])
 
  dnl Headers included in libcfile/libcfile_file.h
  AC_CHECK_HEADERS([fcntl.h unistd.h])
@@ -62,7 +62,7 @@ AC_DEFUN([AX_LIBCFILE_CHECK_LOCAL],
   ])
 
  dnl File stream functions used in libcfile/libcfile_stream.h
- AC_CHECK_FUNCS([fclose feof fopen fread fseeko fseeko64 ftello ftello64 fwrite])
+ AC_CHECK_FUNCS([fclose feof fileno fopen fread fseeko fseeko64 ftello ftello64 fwrite])
 
  AS_IF(
   [test "x$ac_cv_func_fclose" != xyes],
@@ -79,9 +79,9 @@ AC_DEFUN([AX_LIBCFILE_CHECK_LOCAL],
   ])
  
  AS_IF(
-  [test "x$ac_cv_func_fgets" != xyes],
+  [test "x$ac_cv_func_fileno" != xyes],
   [AC_MSG_FAILURE(
-   [Missing function: fgets],
+   [Missing function: fileno],
    [1])
   ])
  
