@@ -24,6 +24,9 @@ Notes:
   multiple of sector size. Any other value will result in error 0x57
   (ERROR_INVALID_PARAMETER).
 
+20120825
+* applied updates
+
 20120630
 * applied updates
 
